add some text in circuesquare.html

--- a/circle-square.html
+++ b/circle-square.html
@@ -21,11 +21,28 @@
         <div class="container">
 
             <h1>Circle Square</h1>
-            <iframe src="https://player.vimeo.com/video/220148706" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            <h2>【概要】-個人制作-</h2>
-            <p class="text"></p>
-            <h2>【使用ツール】</h2>
-            <p class="text"></p>
+            <a href="http://circle-square.sfc.keio.ac.jp/"><img src="img/circlesquare.jpg" alt=""></a>
+            <h2>【概要】-チーム制作-</h2>
+            <p class="text">
+                SFC生のためのSFC生によるSFCのサークル情報まとめサイトです。<br>
+                こちらがURLになります。<a href="http://circle-square.sfc.keio.ac.jp/" target="_blank">http://circle-square.sfc.keio.ac.jp/</a><br>
+                プロジェクトマネージャー、エンジニア、デザイナーに分かれて、チーム制作を行いました。<br>
+                自身はEnginner Leaderとしてタスクを任され、コーディング規約やデザインガイドラインの制作等から、実際にコーディング、Webサイトのデザインを行うところまで、担当しました。
+            </p>
+            <h2>【担当・使用ツール】</h2>
+            <p class="text">
+                Enginner Leaderとしての担当でしたが、デザイン面もいくつか担当しました。<br>
+                デザイン面では、ワイヤーフレーム、モックアップの提案を行い、デザイナーチームに最後の仕上げをお願いしました。<br>
+                エンジニア面では、他２名のエンジニアと僕を含めた三人分に、タスク分担をし、githubにて、チーム開発を行いました。<br>
+                <br>
+                Prott　→　ワイヤーフレーム、モックアップ、プロトタイプの制作に使用<br>
+                Adobe XD　→　ワイヤーフレーム、モックアップ、プロトタイプの制作に使用<br>
+                Adobe Illustrator　→　モックアップの制作に使用<br>
+                Wordpress/html/css/js/ライブラリ諸々　→　Webサイト構築のために使用<br>
+                Github　→　チーム開発のために活用<br>
+                Slack　→　コミュニケーションツールとして活用<br>
+
+            </p>
         </div>
 
 
