change text in about.html

--- a/about.html
+++ b/about.html
@@ -28,18 +28,19 @@
                 年齢　　　20歳<br>
                 大学　　　慶應義塾大学<br>
                 学部　　　環境情報学部<br>
-                学年　　　２年<br>
-                研究室　　中西研究室　/　武藤研究室<br>
+                学年　　　3年<br>
+                研究室　　中西研究室<br>
                 卒業年　　19卒<br>
-                仕事場　　株式会社ライフイズテック　/　TeamLab株式会社<br>
-                興味　　　UI/UX　グラフィックデザイン　Webサイト制作<br>
-                技術　　　Illustrator Photoshop Coding(HTML/CSS) Wordpress JavaScript jQuery<br>
+                仕事場　　<a href="https://life-is-tech.com/" class="anchor_text">株式会社ライフイズテック</a>　/　<a href="http://www.team-lab.com/">TeamLab株式会社</a><br>
+                興味　　　ものづくりにまつわることならなんでも<br>
+                音楽　　　ディスコミュージック
+                 <br>
             </p>
-            <h2>【ポートフォリオ】</h2>
-            <p class="text">
-                <a href="https://vimeo.com/user57517113" target="_blank">映像:Vimeo</a>
-                <a href="https://www.instagram.com/ryosukefujiki/" target="_blank">写真:Instagram</a>
-                <a href="http://ryosukefujiki.tumblr.com/" target="_blank">イラスト:Tumblr</a>
+            <h2>【Portfolio】</h2>
+            <p class="text portfolio">
+                <a href="https://vimeo.com/user57517113" target="_blank">Vimeo</a>
+                <a href="https://www.instagram.com/ryosukefujiki/" target="_blank">Instagram</a>
+                <a href="http://ryosukefujiki.tumblr.com/" target="_blank">Tumblr</a>
                 <a href="https://www.facebook.com/rfujiki0625" target="_blank">Facebook</a>
                 <a href="https://www.pinterest.jp/fis10sai/" target="_blank">Pinterests</a>
             </p>
