change spell mis in about.html

--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
 
             <h1>About</h1>
             <img src="img/myimg.JPG" width = "400" alt="">
-            <h2>【Bioglaphy】</h2>
+            <h2>【Biography】</h2>
             <p class="text">
                 生年月日　平成8年/1996年6月25日<br>
                 年齢　　　20歳<br>
