--- a/about.html
+++ b/about.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
         <title>About | Ryosuke Fujiki Portfolio</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Nunito:400,700">
@@ -18,6 +19,7 @@
             </nav>
         </header>
 
+       <hr>
         <div class="container">
 
             <h1>About</h1>
@@ -32,7 +34,7 @@
                 研究室　　中西研究室<br>
                 卒業年　　19卒<br>
                 仕事場　　<a href="https://life-is-tech.com/" class="anchor_text">株式会社ライフイズテック</a>　/　<a href="http://www.team-lab.com/">TeamLab株式会社</a><br>
-                興味　　　ものづくりにまつわることならなんでも<br>
+                興味　　　ものづくりにまつわること<br>
                 音楽　　　ディスコミュージック
                  <br>
             </p>
