--- a/circle-square.html
+++ b/circle-square.html
@@ -2,6 +2,7 @@
 <html lang="ja">
     <head>
         <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
         <title>Circle Square | Ryosuke Fujiki Portfolio</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Nunito:400,700">
@@ -17,6 +18,7 @@
                 </ul>
             </nav>
         </header>
+        <hr>
 
         <div class="container">
 
