change font size of card title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <header class="header">
         <img src="img/title.png" alt="" class="header__img">
-        <a href="#" class="scroll" id = "scroll"><span></span>Touch</a>
+        <a href="#" class="scroll" id = "scroll"><span></span>Scroll</a>
     </header>
 
     <a href = "upcycling-skateboard.html" class="card">
