--- a/circle-square.html
+++ b/circle-square.html
@@ -7,6 +7,16 @@
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Nunito:400,700">
         <link rel="stylesheet" href="css/contents.css">
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+                (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+                                    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+            ga('create', 'UA-100786231-1', 'auto');
+            ga('send', 'pageview');
+
+        </script>
     </head>
     <body>
         <header class="header">
