--- a/upcycling-skateboard.html
+++ b/upcycling-skateboard.html
@@ -23,8 +23,8 @@
         <img src="img/title.png" alt="" class="header__img">
         <nav>
             <ul>
-                <li><a href="index.html" target="_blank">Home</a></li>
-                <li><a href="about.html" target="_blank">About</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
             </ul>
         </nav>
     </header>
