add Gif Animation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="img/title.png" alt="" class="header__img">
+        <img src="img/title.gif" alt="" class="header__img">
         <a href="#" class="scroll" id = "scroll"><span></span>Scroll</a>
     </header>
 
