Change scroll button size

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <header class="header">
-            <img src="img/title.png" alt="" class="header__img">
+            <img src="img/closed.png" alt="" class="header__img">
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
