--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Nunito:400,700">
     <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script src="js/scroll.js"></script>
+<!--    <script src="js/gif.js"></script>-->
     <script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
             (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -22,7 +23,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="img/title.gif" alt="" class="header__img">
+        <img src="img/title.gif" alt="" class="header__img" id="header__img">
         <a href="#" class="scroll" id = "scroll"><span></span>Scroll</a>
     </header>
 
