add more detail explaination in circle-square.html

--- a/circle-square.html
+++ b/circle-square.html
@@ -34,26 +34,50 @@
 
             <h1>Circle Square</h1>
             <a href="http://circle-square.sfc.keio.ac.jp/"><img src="img/circlesquare.jpg" alt=""></a>
-            <h2>【概要】-チーム制作-</h2>
+            <span class="sub">公開年月日 : 2017年3月23日</span>
+            <h2>【概要】</h2>
             <p class="text">
-                SFC生のためのSFC生によるSFCのサークル情報まとめサイトです。<br>
-                こちらがURLになります。<a href="http://circle-square.sfc.keio.ac.jp/" target="_blank">http://circle-square.sfc.keio.ac.jp/</a><br>
-                プロジェクトマネージャー、エンジニア、デザイナーに分かれて、チーム制作を行いました。<br>
-                自身はEnginner Leaderとしてタスクを任され、コーディング規約やデザインガイドラインの制作等から、実際にコーディング、Webサイトのデザインを行うところまで、担当しました。
+                サイト名 : Circle Square ［サークルスクエア］| SFC生のためのサークル情報サイト<br>
+                サイトリンク : <a href="http://circle-square.sfc.keio.ac.jp/" target="_blank">http://circle-square.sfc.keio.ac.jp/</a><br>
+                制作期間 : 2ヶ月
+                制作構成人数 : <a href="http://circle-square.sfc.keio.ac.jp/about" target="_blank">チーム制作 (6名)</a><br>
             </p>
-            <h2>【担当・使用ツール】</h2>
+            <h2>【コンセプト】</h2>
             <p class="text">
-                Enginner Leaderとしての担当でしたが、デザイン面もいくつか担当しました。<br>
-                デザイン面では、ワイヤーフレーム、モックアップの提案を行い、デザイナーチームに最後の仕上げをお願いしました。<br>
-                エンジニア面では、他２名のエンジニアと僕を含めた三人分に、タスク分担をし、githubにて、チーム開発を行いました。<br>
-                <br>
-                Prott　→　ワイヤーフレーム、モックアップ、プロトタイプの制作に使用<br>
-                Adobe XD　→　ワイヤーフレーム、モックアップ、プロトタイプの制作に使用<br>
-                Adobe Illustrator　→　モックアップの制作に使用<br>
-                Wordpress/html/css/js/ライブラリ諸々　→　Webサイト構築のために使用<br>
-                Github　→　チーム開発のために活用<br>
-                Slack　→　コミュニケーションツールとして活用<br>
-
+                「君とサークルの交差点」というキャッチコピーのもと制作しました、サークル情報まとめサイトになります。<br>
+                慶応義塾大学湘南藤沢キャンパスでは、これまでサークル情報を、学生団体が各サークルからお金を徴収し、"冊子"で公開していました。<br>
+                しかしそこには、時間とお金というコストの問題と、その冊子がなければサークル情報が手に入らないというアクセスの問題がありました。<br>
+                そこで、私たちは、この問題を解決すべく、Web上で誰もがたやすく情報にアクセスできるよう、サークル情報まとめサイトを作成しました。<br>
+                新入生が男女問わず使ってもらえるよう、ポップな４色の色合いをアクセントカラーにして白を基調として配色でデザインしました。<br>
+                <img src="img/cs_concept.png" alt="">
+                <span class="sub--inline">http://circle-square.sfc.keio.ac.jp/about</span>
+            </p>
+            <h2>【タスク担当】</h2>
+            <p class="text">
+                DesignerとEngineerの技術の橋渡しをするEngineer Leaderとして担当しました。<br>
+                具体的には、デザイナーチームがデザインモックアップをエンジニアチームにあげる際に、デザインガイドラインをまとめ、コーディングしやすいように指示を出しました。<br>
+                またエンジニアチームも、デザインの会議に参加ができるよう、Prottというサービスを用いてプロトタイプを作成してコミュニケーションをとりました。エンジニアの観点からデザイナーチームにUIの提案を行いました。<br>
+                エンジニア面では、円滑にエンジニアリングの作業ができるよう、コーディング規約を定め、Githubレポジトリを使い開発を行いました。<br>
+                このように、新歓期前という短い制作期間の中で制作を終えるために、エンジニアチームとデザイナーチーム全体を俯瞰して指示を出していました。<br>
+                <a href="https://prottapp.com/p/12e747#/s/58ae659c4942fb5a0529ded7"><img src="img/cs_prott.png" alt=""></a>
+                <span class="sub--inline">https://prottapp.com/p/12e747#/s/58ae659c4942fb5a0529ded7</span>
+            </p>
+            <h2>【制作環境】</h2>
+            <p class="text">
+                『プロトタイピング』　→　Prott, Adobe XD, Adobe Illustrator<br>
+                『開発環境・プログラミング言語』Wordpress, html, css, js, ライブラリ諸々<br>
+                『開発バージョン管理』　→　Github<br>
+                『アナティクス』　→　Google Analytics<br>
+                『SEO』　→　Google Web Master Tool<br>
+                『コミュニケーションツール』　→　Slack<br>
+            </p>
+            <h2>【成果】</h2>
+            <p class="text">
+                <strong>18,000PV達成！</strong><br>
+               毎年900人近い新入生が入学する中、2600人以上のユーザーに使っていただきました！<br>
+               様々なサークルからサークル掲載のお願いのご連絡を多くいただき、日吉や三田など違うキャンパスのサークル情報まで掲載のお願いが届くようになりました。
+                <img src="img/cs_seika.png" alt="">
+                <span class="sub--inline">2017年6月現在</span>
             </p>
         </div>
 
