--- a/circle-square.html
+++ b/circle-square.html
@@ -56,7 +56,7 @@
             <p class="text">
                 DesignerとEngineerの技術の橋渡しをするEngineer Leaderとして担当しました。<br>
                 具体的には、デザイナーチームがデザインモックアップをエンジニアチームにあげる際に、デザインガイドラインをまとめ、コーディングしやすいように指示を出しました。<br>
-                またエンジニアチームも、デザインの会議に参加ができるよう、Prottというサービスを用いてプロトタイプを作成してコミュニケーションをとりました。エンジニアの観点からデザイナーチームにUIの提案を行いました。<br>
+                またエンジニアチームも、デザインの会議に参加ができるよう、Prottというサービスを用いてプロトタイプを作成してコミュニケーションをとりました。エンジニアの観点からデザイナーチームにUIの提案ができました。<br>
                 エンジニア面では、円滑にエンジニアリングの作業ができるよう、コーディング規約を定め、Githubレポジトリを使い開発を行いました。<br>
                 このように、新歓期前という短い制作期間の中で制作を終えるために、エンジニアチームとデザイナーチーム全体を俯瞰して指示を出していました。<br>
                 <a href="https://prottapp.com/p/12e747#/s/58ae659c4942fb5a0529ded7"><img src="img/cs_prott.png" alt=""></a>
