change subscription width

--- a/circle-square.html
+++ b/circle-square.html
@@ -60,7 +60,7 @@
                 エンジニア面では、円滑にエンジニアリングの作業ができるよう、コーディング規約を定め、Githubレポジトリを使い開発を行いました。<br>
                 このように、新歓期前という短い制作期間の中で制作を終えるために、エンジニアチームとデザイナーチーム全体を俯瞰して指示を出していました。<br>
                 <a href="https://prottapp.com/p/12e747#/s/58ae659c4942fb5a0529ded7"><img src="img/cs_prott.png" alt=""></a>
-                <span class="sub--inline">https://prottapp.com/p/12e747#/s/58ae659c4942fb5a0529ded7</span>
+                <span class="sub--inline">Prott</span>
             </p>
             <h2>【制作環境】</h2>
             <p class="text">
