add more detail explaination in upcyling skateboard

--- a/upcycling-skateboard.html
+++ b/upcycling-skateboard.html
@@ -34,17 +34,45 @@
 
         <h1>Upcycling Skateboard</h1>
         <iframe src="https://player.vimeo.com/video/220148706" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-        <h2>【概要】-個人制作-</h2>
+        <span class="sub">Vimeo</span>
+        <h2>【概要】</h2>
         <p class="text">
-            慶應義塾大学SFCにて2017年度春開講の授業「デジタルファブリケーション」にて、「古びたものをアップサイクリングする」という自由制作課題で制作したもの。 今回は、ボロボロになって滑れなくなってしまった"スケートボード"を"ブランコ"にアップサイクリングした。<br>
-            制作過程をfabbleというサービスでまとめられている。<br>
-            <a href="http://fabble.cc/bighappy/digitalfabrication2017" target="_blank">fabble.cc/bighappy</a>
+            プロダクト名 : Upcycling Skateboard<br>
+            制作過程まとめリンク : <a href="http://fabble.cc/bighappy/digitalfabrication2017" target="_blank">fabble.cc/bighappy</a><br>
+            制作期間 : 1ヶ月半<br>
+            制作構成人数 : 個人制作<br>
         </p>
-        <h2>【使用ツール】</h2>
+        <h2>【コンセプト】</h2>
         <p class="text">
-            Rhinoceros　→　スケートボードの３Dモデリング等で使用<br>
-            Adobe Illustrator　→　寸法採寸の際に使用<br>
-            Adobe Premire　→　映像制作で使用<br>
+            慶應義塾大学SFCにて2017年度春開講の授業「デジタルファブリケーション」にて、「古びたものをアップサイクリングする［新しい命を吹き込もう］」という自由制作課題で制作したものです。 今回は、ボロボロになって滑れなくなってしまった"スケートボード"を"ブランコ"にアップサイクリングしました。<br>
+            アップサイクリングするにあたって、スケートボードの遊具としての意味合いは残して、別の命を吹き込むという着想からブランコにアップサイクリングしました。<br>
+            <img src="img/cssb_modeling.png" alt="">
+            <span class="sub--inline">完成モデリングイメージ</span>
+        </p>
+        <h2>【制作過程】</h2>
+        <p class="text">
+            制作過程や制作にあたっての失敗やメモをまとめることで、制作過程で過去を振り返り、新たなプロトタイプの発想が生まれるようにしました。<br>
+            失敗例や制作の過程を大切にするプロトタイプ思考を大切にして制作しました。<br>
+            その過程をfabbleというサービスを用いて、まとめています。<br>
+            <a href="http://fabble.cc/bighappy/digitalfabrication2017">fabble.cc/bighappy</a><br>
+            ❶スケートボードの全部品分解作業　→　<br>
+            ❷全部品採寸、デジタルデータ化<br>
+            ❸全部品モデリング　→　<br>
+            ❹アタッチメントデザイン、モデリング　→　<br>
+            ❺最後の仕上げ、塗装<br>
+            <a href="http://fabble.cc/bighappy/digitalfabrication2017"><img src="img/cssb_fabble.png" alt=""></a>
+            <span class="sub--inline">fabble.cc</span>
+        </p>
+        <h2>【開発環境】</h2>
+        <p class="text">
+            『モデリング』　→　Rhinoceros<br>
+            『寸法採寸』　→　Adobe Illustrator<br>
+            『映像制作』　→　Adobe Premire<br>
+        </p>
+        <h2>【成果】</h2>
+        <p class="text">
+            <img src="img/cssb_com3.png" alt="" class="img-text">
+            <span class="sub--inline">完成写真</span>
         </p>
     </div>
 
