add more detail explaination in heartbeat hacker.html

--- a/circle-square.html
+++ b/circle-square.html
@@ -31,7 +31,6 @@
         <hr>
 
         <div class="container">
-
             <h1>Circle Square</h1>
             <a href="http://circle-square.sfc.keio.ac.jp/"><img src="img/circlesquare.jpg" alt=""></a>
             <span class="sub">公開年月日 : 2017年3月23日</span>
@@ -40,7 +39,7 @@
                 サイト名 : Circle Square ［サークルスクエア］| SFC生のためのサークル情報サイト<br>
                 サイトリンク : <a href="http://circle-square.sfc.keio.ac.jp/" target="_blank">http://circle-square.sfc.keio.ac.jp/</a><br>
                 制作期間 : 2ヶ月
-                制作構成人数 : <a href="http://circle-square.sfc.keio.ac.jp/about" target="_blank">チーム制作 (6名)</a><br>
+                制作構成人数 : チーム制作 (6名)<br>
             </p>
             <h2>【コンセプト】</h2>
             <p class="text">
@@ -65,7 +64,7 @@
             <h2>【制作環境】</h2>
             <p class="text">
                 『プロトタイピング』　→　Prott, Adobe XD, Adobe Illustrator<br>
-                『開発環境・プログラミング言語』Wordpress, html, css, js, ライブラリ諸々<br>
+                『開発環境・プログラミング言語』Wordpress, PHP, html, css, js, ライブラリ諸々<br>
                 『開発バージョン管理』　→　Github<br>
                 『アナティクス』　→　Google Analytics<br>
                 『SEO』　→　Google Web Master Tool<br>
