--- a/heartbeat-hacker.html
+++ b/heartbeat-hacker.html
@@ -34,20 +34,65 @@
 
             <h1>Heartbeat Hacker</h1>
             <iframe src="https://player.vimeo.com/video/207013220" width="640" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
-            <h2>【概要】-チーム制作-</h2>
+            <span class="sub">Vimeo</span>
+            <h2>【概要】</h2>
             <p class="text">
-                運動者の心拍を記録し、その心拍よりも遅いリズムの音をヘッドフォンを通じて運動者に聞かせます。その結果、その偽のリズムに影響を受け、運動者の心拍が上がりきらず留まったり、上昇スピードが遅くなるのではないかという仮説のもと研究をしています。2人チーム(一人離脱したため)での開発・実験を行なっています。<br>
-                2016年に開催された、<a href="https://orf.sfc.keio.ac.jp/2016/" target="_blank">SFC-OpenResearchForam</a>にて展示を行ないました。<br>
+                プロダクト名 : Heartbeat Hacker <br>
+                動画リンク : <a href="https://vimeo.com/207013220" target="_blank">https://vimeo.com/207013220</a><br>
+                制作期間 : 2ヶ月
+                制作構成人数 : チーム制作 (2名+教員指導1名)<br>
+                *作品は研究段階です。<br>
+            </p>
+            <h2>【コンセプト】</h2>
+            <p class="text">
+                運動者の心拍を記録し、その心拍よりも遅いリズムの音をヘッドフォンを通じて運動者に聞かせます。その結果、その偽のリズムに影響を受け、運動者の心拍が上がりきらず留まったり、上昇スピードが遅くなるのではないかという仮説のもと研究をしています。<br>
+                <a href="https://www.youtube.com/watch?v=wGE-Y7ROduk">疑似体験やSRといった過去の研究論文など</a>から着想を得ました。疑似的な体験を与えることで、人としての機能の拡張を実現できないかというコンセプトから始まったHCI(Human Computer Interaction)にまつわる研究です。
+                <img src="img/hh_seika0.png" alt="">
+                <span class="sub--inline">プロダクトイメージ</span>
+            </p>
+            <h2>【タスク担当】</h2>
+            <p class="text">
+                ロゴデザイン、ハードウェアデザイン、映像制作を担当しました。<br>
+                ロゴデザインにおいては、いくつかのプロトタイプを制作しました。<br>
+                はじめ、ずれた心拍音を伝えるという意味合いをイメージ化したものを作りました。
+                <img src="img/logo1.png" alt="">
+                <span class="sub--inline">ロゴプロトタイプ1</span>
+                しかし、チームメンバーから、「心拍をハックする意味合いが伝えられない」「かわいい印象でお菓子のロゴのようなイメージを与えてしまう」というフィードバックをもらいました<br>
+                そこで次に制作したロゴがこちらです。
+                <img src="img/logo2.png" alt="">
+                <span class="sub--inline">ロゴプロトタイプ2</span>
+                これについては、「心拍のビートを伝えたいのはわかるが、わかりにくい」「心拍とわかるようなロゴデザインがいい」というフィードバックを得ました。
+                そこで、次に、こちらのロゴプロトタイプを制作。
+                <img src="img/logo3.png" alt="">
+                <span class="sub--inline">ロゴプロトタイプ3</span>
+                これもなお、「今度はジュエリーのような女性らしいイメージが感じられる」「その心拍と電子回路を表したアイディアはいい」というフィードバックが得られました。
+                そこからまたアイディアを膨らまし制作し決定したロゴがこちらです。
+                <img src="img/logo4.png" alt="">
+                <span class="sub--inline">ロゴプロトタイプ4</span>
+                ハードウェアにおいては、心拍センサーを用いて、ユーザーの心拍数を取得し、Arduinoから、PCのソフトウェアに送るプロトタイプを製作しました。<br>
+                <img src="img/hh_image.jpg" alt="">
+                <span class="sub--inline">実験イメージ</span>
+            </p>
+            <h2>【制作環境】</h2>
+            <p class="text">
+                『プロトタイピング』　→　Arduino, Xbee, ZigBee NetWork,Processing<br>
+                『モデリング』 → Rhinoceros<br>
+                『ロゴ、ポスター制作』　→　Adobe Illustrator<br>
+                『映像制作』　→　Adobe Premire,Adobe After Effect<br>
+            </p>
+            <h2>【実験】</h2>
+            <p class="text">
+                20名の男女に実験を行なったところ、本システムが運動者に影響を及ぼす可能性を示すデータが得られました。今後は、複数センサーを用いた、生体情報の取得や、心肺機能の異なる集団に対する実験を行う予定。
+                <img src="img/hh_seika.png" alt="">
+                <span class="sub--inline">2016年11月時点</span>
+            </p>
+            <h2>【成果】</h2>
+            <p class="text">
+                2016年11月に開催された、<a href="https://orf.sfc.keio.ac.jp/2016/" target="_blank">SFC-OpenResearchForam</a>にて展示を行ないました。<br>
                 2017年夏8月5日、6日に幕張で開催される <a href="http://makezine.jp/event/mft2016/" target="_blank">Maker Faire Tokyo</a>にて展示予定です。<br>
                 *作品は研究段階です。
-            </p>
-            <h2>【役割・使用ツール】</h2>
-            <p class="text">
-                ハードウェア、映像、ロゴ制作を担当しました。<br>
-                もう一人のメンバーがプロジェクトマネジメント、ソフトウェアの開発を担当。<br>
-                Arduino　→　心拍をセンシングするためのプロトタイプ作成に使用<br>
-                Adobe Illustrator　→　ロゴ、展示ポスターの制作に使用<br>
-                Adobe Premire →　映像制作に使用<br>
+                <img src="img/hh_seika2.png" alt="">
+                <span class="sub--inline">Maker Faire Tokyo 2017</span>
             </p>
         </div>
 
