add favicons all html file

--- a/heartbeat-hacker.html
+++ b/heartbeat-hacker.html
@@ -17,6 +17,28 @@
             ga('send', 'pageview');
 
         </script>
+        <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="img/favicons/favicon.ico">
+        <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicons/favicon.ico">
+        <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png">
+        <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png">
+        <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png">
+        <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-touch-icon-76x76.png">
+        <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png">
+        <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-touch-icon-120x120.png">
+        <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png">
+        <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-touch-icon-152x152.png">
+        <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
+        <link rel="icon" type="image/png" sizes="192x192" href="img/favicons/android-chrome-192x192.png">
+        <link rel="icon" type="image/png" sizes="48x48" href="img/favicons/favicon-48x48.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-160x160.png">
+        <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-196x196.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+        <link rel="manifest" href="img/favicons/manifest.json">
+        <meta name="msapplication-TileColor" content="#2d88ef">
+        <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+
     </head>
     <body>
         <header class="header">
@@ -82,7 +104,7 @@
             </p>
             <h2>【実験】</h2>
             <p class="text">
-                20名の男女に実験を行なったところ、本システムが運動者に影響を及ぼす可能性を示すデータが得られました。今後は、複数センサーを用いた、生体情報の取得や、心肺機能の異なる集団に対する実験を行う予定。
+                20才の男女に実験を行なったところ、本システムが運動者に影響を及ぼす可能性を示すデータが得られました。今後は、複数センサーを用いた、生体情報の取得や、心肺機能の異なる集団に対する実験を行う予定。
                 <img src="img/hh_seika.png" alt="">
                 <span class="sub--inline">2016年11月時点</span>
             </p>
