--- a/upcycling-skateboard.html
+++ b/upcycling-skateboard.html
@@ -17,6 +17,28 @@
         ga('send', 'pageview');
 
     </script>
+    <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="img/favicons/favicon.ico">
+    <link rel="icon" type="image/vnd.microsoft.icon" href="img/favicons/favicon.ico">
+    <link rel="apple-touch-icon" sizes="57x57" href="img/favicons/apple-touch-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="img/favicons/apple-touch-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="img/favicons/apple-touch-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="img/favicons/apple-touch-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="img/favicons/apple-touch-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="img/favicons/apple-touch-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="img/favicons/apple-touch-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="img/favicons/apple-touch-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="img/favicons/apple-touch-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="img/favicons/android-chrome-192x192.png">
+    <link rel="icon" type="image/png" sizes="48x48" href="img/favicons/favicon-48x48.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-96x96.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-160x160.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="img/favicons/favicon-196x196.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="img/favicons/favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="img/favicons/favicon-32x32.png">
+    <link rel="manifest" href="img/favicons/manifest.json">
+    <meta name="msapplication-TileColor" content="#2d88ef">
+    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
+
 </head>
 <body>
     <header class="header">
@@ -45,7 +67,7 @@
         <h2>【コンセプト】</h2>
         <p class="text">
             慶應義塾大学SFCにて2017年度春開講の授業「デジタルファブリケーション」にて、「古びたものをアップサイクリングする［新しい命を吹き込もう］」という自由制作課題で制作したものです。 今回は、ボロボロになって滑れなくなってしまった"スケートボード"を"ブランコ"にアップサイクリングしました。<br>
-            アップサイクリングするにあたって、スケートボードの遊具としての意味合いは残して、別の命を吹き込むという着想からブランコにアップサイクリングしました。<br>
+            アップサイクリングするにあたって、スケートボードの"遊具"としての意味合いは残して、別の命を吹き込むという着想からブランコにアップサイクリングしました。<br>
             <img src="img/cssb_modeling.png" alt="">
             <span class="sub--inline">完成モデリングイメージ</span>
         </p>
