change copyright sentence in footer

--- a/upcycling-skateboard.html
+++ b/upcycling-skateboard.html
@@ -100,7 +100,7 @@
 
 
     <footer class="footer">
-        Copyright© 2017 Ryosuke Fujiki
+        © 2017 Ryosuke Fujiki
     </footer>
 </body>
 </html>
