--- a/circle-square.html
+++ b/circle-square.html
@@ -104,7 +104,7 @@
 
 
         <footer class="footer">
-            Copyright© 2017 Ryosuke Fujiki
+            © 2017 Ryosuke Fujiki
         </footer>
     </body>
 </html>
