--- a/heartbeat-hacker.html
+++ b/heartbeat-hacker.html
@@ -120,7 +120,7 @@
 
 
         <footer class="footer">
-            Copyright© 2017 Ryosuke Fujiki
+            © 2017 Ryosuke Fujiki
         </footer>
     </body>
 </html>
