change text in heartbeat hacker.html

--- a/heartbeat-hacker.html
+++ b/heartbeat-hacker.html
@@ -68,7 +68,7 @@
             <h2>【コンセプト】</h2>
             <p class="text">
                 運動者の心拍を記録し、その心拍よりも遅いリズムの音をヘッドフォンを通じて運動者に聞かせます。その結果、その偽のリズムに影響を受け、運動者の心拍が上がりきらず留まったり、上昇スピードが遅くなるのではないかという仮説のもと研究をしています。<br>
-                <a href="https://www.youtube.com/watch?v=wGE-Y7ROduk">疑似体験やSRといった過去の研究論文など</a>から着想を得ました。疑似的な体験を与えることで、人としての機能の拡張を実現できないかというコンセプトから始まったHCI(Human Computer Interaction)にまつわる研究です。
+                <a href="https://www.youtube.com/watch?v=wGE-Y7ROduk">疑似体験やSRといった過去の研究論文など</a>から着想を得ました。疑似的な体験を与えることで、人としての機能の拡張を実現できないかというコンセプトから始まったHCI(Human Computer Interaction)の研究です。
                 <img src="img/hh_seika0.png" alt="">
                 <span class="sub--inline">プロダクトイメージ</span>
             </p>
