Add a tag link to top page in header img tag

--- a/circle-square.html
+++ b/circle-square.html
@@ -42,7 +42,7 @@
     </head>
     <body>
         <header class="header">
-            <img src="img/title.png" alt="" class="header__img">
+            <a href="index.html"><img src="img/title.png" alt="" class="header__img"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
