--- a/heartbeat-hacker.html
+++ b/heartbeat-hacker.html
@@ -42,7 +42,7 @@
     </head>
     <body>
         <header class="header">
-            <img src="img/title.png" alt="" class="header__img">
+            <a href="index.html"><img src="img/title.png" alt="" class="header__img"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
