Add complete img in skateboard.html

--- a/upcycling-skateboard.html
+++ b/upcycling-skateboard.html
@@ -94,7 +94,9 @@
         <h2>【成果】</h2>
         <p class="text">
             <img src="img/cssb_com3.png" alt="" class="img-text">
-            <span class="sub--inline">完成写真</span>
+            <span class="sub--inline">完成写真1</span>
+            <img src="img/cssb_com1.jpg" alt="" class="img-text">
+            <span class="sub--inline">完成写真2</span>
         </p>
     </div>
 
