--- a/circle-square.html
+++ b/circle-square.html
@@ -75,7 +75,7 @@
             </p>
             <h2>【タスク担当】</h2>
             <p class="text">
-                DesignerとEngineerの技術の橋渡しをするEngineer Leaderとして担当しました。<br>
+                DesignerとEngineerの技術の橋渡しをする<span class="underline">Engineer Leader</span>として担当しました。<br>
                 具体的には、デザイナーチームがデザインモックアップをエンジニアチームにあげる際に、デザインガイドラインをまとめ、コーディングしやすいように指示を出しました。<br>
                 またエンジニアチームも、デザインの会議に参加ができるよう、Prottというサービスを用いてプロトタイプを作成してコミュニケーションをとりました。エンジニアの観点からデザイナーチームにUIの提案ができました。<br>
                 エンジニア面では、円滑にエンジニアリングの作業ができるよう、コーディング規約を定め、Githubレポジトリを使い開発を行いました。<br>
@@ -94,7 +94,7 @@
             </p>
             <h2>【成果】</h2>
             <p class="text">
-                <strong>18,000PV達成！</strong><br>
+                <strong><span class="underline">18,000PV達成！</span></strong><br>
                毎年900人近い新入生が入学する中、2600人以上のユーザーに使っていただきました！<br>
                様々なサークルからサークル掲載のお願いのご連絡を多くいただき、日吉や三田など違うキャンパスのサークル情報まで掲載のお願いが届くようになりました。
                 <img src="img/cs_seika.png" alt="">
