--- a/heartbeat-hacker.html
+++ b/heartbeat-hacker.html
@@ -68,13 +68,13 @@
             <h2>【コンセプト】</h2>
             <p class="text">
                 運動者の心拍を記録し、その心拍よりも遅いリズムの音をヘッドフォンを通じて運動者に聞かせます。その結果、その偽のリズムに影響を受け、運動者の心拍が上がりきらず留まったり、上昇スピードが遅くなるのではないかという仮説のもと研究をしています。<br>
-                <a href="https://www.youtube.com/watch?v=wGE-Y7ROduk">疑似体験やSRといった過去の研究論文など</a>から着想を得ました。疑似的な体験を与えることで、人としての機能の拡張を実現できないかというコンセプトから始まったHCI(Human Computer Interaction)の研究です。
+                <a href="https://www.youtube.com/watch?v=wGE-Y7ROduk">疑似体験やSRといった過去の研究論文など</a>から着想を得ました。疑似的な体験を与えることで、人としての機能の拡張を実現できないかというコンセプトから始まった<span class="underline">HCI(Human Computer Interaction)の研究</span>です。
                 <img src="img/hh_seika0.png" alt="">
                 <span class="sub--inline">プロダクトイメージ</span>
             </p>
             <h2>【タスク担当】</h2>
             <p class="text">
-                ロゴデザイン、ハードウェアデザイン、映像制作を担当しました。<br>
+                <span class="underline">ロゴデザイン、ハードウェアデザイン、映像制作</span>を担当しました。<br>
                 ロゴデザインにおいては、いくつかのプロトタイプを制作しました。<br>
                 はじめ、ずれた心拍音を伝えるという意味合いをイメージ化したものを作りました。
                 <img src="img/logo1.png" alt="">
