--- a/upcycling-skateboard.html
+++ b/upcycling-skateboard.html
@@ -66,7 +66,7 @@
         </p>
         <h2>【コンセプト】</h2>
         <p class="text">
-            慶應義塾大学SFCにて2017年度春開講の授業「デジタルファブリケーション」にて、「古びたものをアップサイクリングする［新しい命を吹き込もう］」という自由制作課題で制作したものです。 今回は、ボロボロになって滑れなくなってしまった"スケートボード"を"ブランコ"にアップサイクリングしました。<br>
+            慶應義塾大学SFCにて2017年度春開講の授業「デジタルファブリケーション」にて、「古びたものをアップサイクリングする［新しい命を吹き込もう］」という自由制作課題で制作したものです。 今回は、ボロボロになって滑れなくなってしまった<span class="underline">"スケートボード"を"ブランコ"</span>にアップサイクリングしました。<br>
             アップサイクリングするにあたって、スケートボードの"遊具"としての意味合いは残して、別の命を吹き込むという着想からブランコにアップサイクリングしました。<br>
             <img src="img/cssb_modeling.png" alt="">
             <span class="sub--inline">完成モデリングイメージ</span>
@@ -75,7 +75,7 @@
         <p class="text">
             制作過程や制作にあたっての失敗やメモをまとめることで、制作過程で過去を振り返り、新たなプロトタイプの発想が生まれるようにしました。<br>
             失敗例や制作の過程を大切にするプロトタイプ思考を大切にして制作しました。<br>
-            その過程をfabbleというサービスを用いて、まとめています。<br>
+            その過程を<span class="underline">fabble</span>というサービスを用いて、まとめています。<br>
             <a href="http://fabble.cc/bighappy/digitalfabrication2017">fabble.cc/bighappy</a><br>
             ❶スケートボードの全部品分解作業　→　<br>
             ❷全部品採寸、デジタルデータ化<br>
