add anchor link to toppage icon

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 </head>
 <body>
     <header class="header">
-        <img src="img/title.gif" alt="" class="header__img" id="header__img">
+        <a href="about.html"><img src="img/title.gif" alt="" class="header__img" id="header__img"></a>
         <a href="#" class="scroll" id = "scroll"><span></span>Scroll</a>
     </header>
 
