--- a/circle-square.html
+++ b/circle-square.html
@@ -65,10 +65,7 @@
             </p>
             <h2>【コンセプト】</h2>
             <p class="text">
-                「君とサークルの交差点」というキャッチコピーのもと制作しました、サークル情報まとめサイトになります。<br>
-                慶応義塾大学湘南藤沢キャンパスでは、これまでサークル情報を、学生団体が各サークルからお金を徴収し、"冊子"で公開していました。<br>
-                しかしそこには、時間とお金というコストの問題と、その冊子がなければサークル情報が手に入らないというアクセスの問題がありました。<br>
-                そこで、私たちは、この問題を解決すべく、Web上で誰もがたやすく情報にアクセスできるよう、サークル情報まとめサイトを作成しました。<br>
+                「君とサークルの交差点」というキャッチコピーのもと制作しました、サークル情報まとめサイトです。<br>
                 新入生が男女問わず使ってもらえるよう、ポップな４色の色合いをアクセントカラーにして白を基調として配色でデザインしました。<br>
                 <img src="img/cs_concept.png" alt="">
                 <span class="sub--inline">http://circle-square.sfc.keio.ac.jp/about</span>
@@ -76,10 +73,8 @@
             <h2>【タスク担当】</h2>
             <p class="text">
                 DesignerとEngineerの技術の橋渡しをする<span class="underline">Engineer Leader</span>として担当しました。<br>
-                具体的には、デザイナーチームがデザインモックアップをエンジニアチームにあげる際に、デザインガイドラインをまとめ、コーディングしやすいように指示を出しました。<br>
-                またエンジニアチームも、デザインの会議に参加ができるよう、Prottというサービスを用いてプロトタイプを作成してコミュニケーションをとりました。エンジニアの観点からデザイナーチームにUIの提案ができました。<br>
-                エンジニア面では、円滑にエンジニアリングの作業ができるよう、コーディング規約を定め、Githubレポジトリを使い開発を行いました。<br>
-                このように、新歓期前という短い制作期間の中で制作を終えるために、エンジニアチームとデザイナーチーム全体を俯瞰して指示を出していました。<br>
+                デザイナーチームにデザインガイドラインをまとめさせ、コーディングしやすいように指示を出しました。<br>
+                エンジニアチームが、デザインの会議に参加ができるよう、Prottを用いてコミュニケーションをとりました。エンジニアの観点からデザイナーチームにUIの提案ができました。<br>
                 <a href="https://prottapp.com/p/12e747#/s/58ae659c4942fb5a0529ded7"><img src="img/cs_prott.png" alt=""></a>
                 <span class="sub--inline">Prott</span>
             </p>
