--- a/upcycling-skateboard.html
+++ b/upcycling-skateboard.html
@@ -66,8 +66,8 @@
         </p>
         <h2>【コンセプト】</h2>
         <p class="text">
-            慶應義塾大学SFCにて2017年度春開講の授業「デジタルファブリケーション」にて、「古びたものをアップサイクリングする［新しい命を吹き込もう］」という自由制作課題で制作したものです。 今回は、ボロボロになって滑れなくなってしまった<span class="underline">"スケートボード"を"ブランコ"</span>にアップサイクリングしました。<br>
-            アップサイクリングするにあたって、スケートボードの"遊具"としての意味合いは残して、別の命を吹き込むという着想からブランコにアップサイクリングしました。<br>
+            「古びたものをアップサイクリングする［新しい命を吹き込もう］」という自由制作課題で制作したものです。 今回は、ボロボロになって滑れなくなってしまった<span class="underline">"スケートボード"を"ブランコ"</span>にアップサイクリングしました。<br>
+            スケートボードの"遊具"としての意味合いは残して、別の命を吹き込むという着想からブランコにアップサイクリングしました。<br>
             <img src="img/cssb_modeling.png" alt="">
             <span class="sub--inline">完成モデリングイメージ</span>
         </p>
