--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-        <title>About | Ryosuke Fujiki Portfolio</title>
+        <title>About | 藤木 良祐 Ryosuke Fujiki Portfolio</title>
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Nunito:400,700">
         <link rel="stylesheet" href="css/about.css">
@@ -42,7 +42,7 @@
     </head>
     <body>
         <header class="header">
-            <a href="index.html"><img src="img/closed.png" alt="" class="header__img"></a>
+            <a href="index.html"><img src="img/closed.png" alt="藤木 良祐 Ryosuke Fujiki" class="header__img"></a>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
