--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Ryosuke Fujiki Portfolio</title>
+    <title>藤木 良祐 Ryosuke Fujiki Portfolio</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Noto+Sans:400,700|Nunito:400,700">
@@ -45,7 +45,7 @@
 </head>
 <body>
     <header class="header">
-        <a href="about.html"><img src="img/title.gif" alt="" class="header__img" id="header__img"></a>
+        <a href="about.html"><img src="img/title.gif" alt="藤木 良祐 Ryosuke Fujiki" class="header__img" id="header__img"></a>
         <a href="#" class="scroll" id = "scroll"><span></span>Scroll</a>
     </header>
 
