add [award] and [skill] in about.html

--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
             <p class="text">
                 名前　　　藤木良祐<br>
                 生年月日　平成8年/1996年6月25日<br>
-                年齢　　　20歳<br>
+                年齢　　　21歳<br>
                 大学　　　慶應義塾大学<br>
                 学部　　　環境情報学部<br>
                 学年　　　3年<br>
@@ -68,8 +68,21 @@
                 卒業年　　19卒<br>
                 仕事場　　<a href="https://life-is-tech.com/" class="anchor_text">株式会社ライフイズテック</a>　/　<a href="http://www.team-lab.com/">TeamLab株式会社</a><br>
                 興味　　　ものづくりにまつわること<br>
-                音楽　　　ディスコミュージック
+                音楽　　　ディスコミュージック<br>
                  <br>
+            </p>
+            <h2>【Award】</h2>
+            <p class="text portfolio">
+                <a href="http://www.career.dentsu.jp/intern/2017/" target="_blank">電通インターンシップ2017アイディアの学校　　金賞</a><br>
+                <a href="http://www.career.dentsu.jp/intern/2017/" target="_blank">電通インターンシップ2017アイディアの学校　　銅賞</a><br>
+                <a href="https://www.cyberagent.co.jp/recruit/special/real/ui_academy/" target="_blank">CyberAgent Internship 2017 UIDA　　UI発明賞</a><br>
+                <a href="http://www.king-waav.org/" target="_blank">Business Contest KING　　準優勝</a><br>
+            </p>
+            <h2>【Skill】</h2>
+            <p class="text portfolio">
+                基本情報技術者<br>
+                TOEFL iTP LEVEL1 SCORE:543<br>
+                英検2級<br>
             </p>
             <h2>【Portfolio】</h2>
             <p class="text portfolio">
