--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         <a href="#" class="scroll" id = "scroll"><span></span>Scroll</a>
     </header>
 
+    <a href = "kazokugamonogatari.html" class="card">
+        <img src="img/kazokugamonogatari.png" alt="">
+        <h2 class="title">かぞくが、ものがたり。</h2>
+    </a>
+
     <a href = "circle-square.html" class="card">
         <img src="img/circlesquare.jpg" alt="">
         <h2 class="title">Circle Square</h2>
