--- a/kazokugamonogatari.html
+++ b/kazokugamonogatari.html
@@ -55,11 +55,11 @@
         <div class="container">
             <h1>かぞくが、ものがたり</h1>
             <a href="https://speakerdeck.com/bighappy/kazokuga-mofalsegatari" target="_blank"><img src="img/kazokugamonogatari.png" alt=""></a>
-            <span class="sub">電通インターンシップ 2017 アイディアの学校　　優勝/金賞</span>
+            <span class="sub">アイディアの学校　　優勝/金賞</span>
             <h2>【概要】</h2>
             <p class="text">
                 プロダクト名 : かぞくが、ものがたり<br>
-                プレゼン資料リンク : <a href="https://speakerdeck.com/bighappy/kazokuga-mofalsegatari" target="_blank">https://speakerdeck.com/bighappy/kazokuga-mofalsegatari</a><br>
+                プレゼン資料リンク : <a href="https://speakerdeck.com/bighappy/kazokuga-mofalsegatari" target="_blank">SpeakerDeck</a><br>
                 制作期間 : 1週間<br>
                 制作構成人数 : チーム制作 (2名)<br>
             </p>
