add lineandball in index.html

--- a/index.html
+++ b/index.html
@@ -54,6 +54,11 @@
         <h2 class="title">かぞくが、ものがたり。</h2>
     </a>
 
+    <a href = "lineandball.html" class="card">
+        <img src="img/lineandball.png" alt="">
+        <h2 class="title">LINE and BALL</h2>
+    </a>
+
     <a href = "circle-square.html" class="card">
         <img src="img/circlesquare.jpg" alt="">
         <h2 class="title">Circle Square</h2>
