add landscape-awa index.html

--- a/index.html
+++ b/index.html
@@ -59,14 +59,19 @@
         <h2 class="title">LINE and BALL</h2>
     </a>
 
-    <a href = "circle-square.html" class="card">
-        <img src="img/circlesquare.jpg" alt="">
-        <h2 class="title">Circle Square</h2>
+    <a href = "landscape-awa.html" class="card">
+        <img src="img/landscape%20AWA.png" alt="">
+        <h2 class="title">Landscape AWA</h2>
     </a>
 
     <a href = "heartbeat-hacker.html" class="card">
         <img src="img/heartbeathacker.png" alt="">
         <h2 class="title">HeartbeatHacker</h2>
+    </a>
+
+    <a href = "circle-square.html" class="card">
+        <img src="img/circlesquare.jpg" alt="">
+        <h2 class="title">Circle Square</h2>
     </a>
 
     <a href = "upcycling-skateboard.html" class="card">
