--- a/kazokugamonogatari.html
+++ b/kazokugamonogatari.html
@@ -65,8 +65,8 @@
             </p>
             <h2>【コンセプト】</h2>
             <p class="text">
-                電通インターンシップ 2017 アイディアの学校で開催された「敬老の日を盛り上げるアイディアを考える」というコンペで製作したアイディアです。<br>
-                敬老の日に家族で制作する参加型の絵本プロダクトをつくりました。<br>
+                電通インターンシップ 2017 アイディアの学校で開催された「敬老の日を盛り上げるアイディアを考える」というコンペで生まれたアイディアです。<br>
+                敬老の日に家族でとりくむ参加型の絵本プロダクトを制作しました。<br>
                 <img src="img/book.png" alt="">
                 <span class="sub--inline"><a href="https://speakerdeck.com/bighappy/kazokuga-mofalsegatari-1" target="_blank">絵本冊子データ</a></span>
             </p>
